Closed Bug 1833982 Opened 2 years ago Closed 2 years ago

Perma Windows MinGW all [tier 2] /builds/worker/checkouts/gecko/widget/windows/filedialog/WinFileDialogCommands.cpp:9:10: fatal error: 'shobjidl_core.h' file not found

Categories

(Core :: Widget: Win32, defect)

defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox113 --- unaffected
firefox114 --- unaffected
firefox115 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: rkraesig)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [stockwell unknown])

Attachments

(1 file)

Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=416331019&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Sd4sQXnlTxadKGMm84mWjQ/runs/0/artifacts/public/logs/live_backing.log


[task 2023-05-19T02:07:12.837Z] 02:07:12     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/windows/filedialog'
[task 2023-05-19T02:07:12.840Z] 02:07:12     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -Qunused-arguments -o Unified_cpp_windows_filedialog0.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/windows/filedialog -I/builds/worker/workspace/obj-build/widget/windows/filedialog -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-ambiguous-reversed-operator -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_windows_filedialog0.o.pp   Unified_cpp_windows_filedialog0.cpp
[task 2023-05-19T02:07:12.840Z] 02:07:12     INFO -  In file included from Unified_cpp_windows_filedialog0.cpp:2:
[task 2023-05-19T02:07:12.841Z] 02:07:12     INFO -  /builds/worker/checkouts/gecko/widget/windows/filedialog/WinFileDialogCommands.cpp:9:10: fatal error: 'shobjidl_core.h' file not found
[task 2023-05-19T02:07:12.841Z] 02:07:12     INFO -  #include <shobjidl_core.h>
[task 2023-05-19T02:07:12.841Z] 02:07:12     INFO -           ^~~~~~~~~~~~~~~~~
[task 2023-05-19T02:07:12.841Z] 02:07:12     INFO -  1 error generated.
[task 2023-05-19T02:07:12.841Z] 02:07:12    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:670: Unified_cpp_windows_filedialog0.o] Error 1
[task 2023-05-19T02:07:12.841Z] 02:07:12     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/windows/filedialog'
[task 2023-05-19T02:07:12.842Z] 02:07:12     INFO -  gmake[4]: Target 'target-objects' not remade because of errors.
[task 2023-05-19T02:07:12.842Z] 02:07:12    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: widget/windows/filedialog/target-objects] Error 2
[task 2023-05-19T02:07:12.848Z] 02:07:12     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/xpcom/components'

Hi Ray! Can you please take a look at this?
Thank you!

Flags: needinfo?(rkraesig)

Set release status flags based on info from the regressing bug 1833450

MinGW builds don't have <shobjidl_core.h>, but do have <shobjidl.h>.
Substitute appropriately.

Assignee: nobody → rkraesig
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: