Bug 1833982 - [1/1] Fix MinGW builds  r=gstoll

MinGW builds don't have <shobjidl_core.h>, but do have <shobjidl.h>.
Substitute appropriately.

Differential Revision: https://phabricator.services.mozilla.com/D178550